# ros2_decoupling_control_law

./: .gitignore  README.md
src/robot_controller/: README.md  package.xml  setup.py
src/robot_controller/robot_controller/: create_trajectory.py  isc_control_law_decoupling.py  isc_control_law_decoupling_turtlesim.py  waypoint_server.py
src/robot_controller/robot_controller/config/: waypoints.yaml
src/robot_controller/robot_controller/trajectories/: circle.py  eight.py  sinusoid.py  square.py  straight.py  waypoint_linear.py  waypoint_smooth.py
src/robot_controller/robot_controller/utils/: utility.py
src/robot_interfaces/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/msg/: Trajectory.msg
src/robot_interfaces/srv/: GetWaypoints.srv
